--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -11,10 +11,10 @@ auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups_2e_ask=false
 auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=false
 file.reference.yii2-hcy-phpunit-tests=tests
 include.path=${php.global.include.path}
-php.version=PHP_53
+php.version=PHP_54
 project.license=bsd
 source.encoding=UTF-8
-src.dir=
+src.dir=.
 tags.asp=false
 tags.short=false
 test.src.dir=${file.reference.yii2-hcy-phpunit-tests}
