phpunit/phpunit removed from composer.json in order to avoid version conflicts

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "*",
-        "phpunit/phpunit": "*"
+        "yiisoft/yii2": "*"
     },
     "autoload": {
         "psr-4": {
