phpunit/phpunit added to require-dev

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
     "require": {
         "yiisoft/yii2": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "*"
+    },
     "autoload": {
         "psr-4": {
             "abexto\\yepa\\phpunit\\": "lib"
